# ScanDefect3D

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.env  label_map.json
scripts/: check_gpu.py  infer.py  infer_image_defect.py  prepare_opentrench_defect_dataset.py  prepare_synthetic_dataset.py  train.py  train_multitask.py  visualize_prediction.py
src/scandefect3d/models/: factory.py  multitask_factory.py  multitask_pointnet.py  multitask_pointnet2.py  multitask_pointnet2_transformer.py  pointnet.py  pointnet2.py
src/scandefect3d/utils/: io.py  metrics.py  pointcloud.py  seed.py
