[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scandefect3d"
version = "0.1.0"
description = "3D construction defect detection with point clouds and deep learning"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "ScanDefect3D"}]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
